# rust-secure-video-stream

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PHASES.md  PROJECT_ROADMAP.md  README.md  TECHNOLOGY_CHOICES.md
crates/capture/: Cargo.toml
crates/capture/src/: lib.rs  main.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/ui/: Cargo.toml
src/: main.rs
