[workspace]
members = [
    "crates/core",
    "crates/capture",
    "crates/codec",
    "crates/network",
    "crates/crypto",
    "crates/ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Erdem Simsek"]
license = "Apache-2.0"
repository = "https://github.com/erdemsimsek/rust-secure-video-stream"

[workspace.dependencies]
